--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,32 +24,64 @@
   <body>
     @@include('blocks/header.html')
     <main>
-      <section class="categories__box container">
-        <div class="categories">
-          <h1 class="title">CATEGORY PRODUCTS</h1>
-          <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__list-item undotted"><a class="breadcrumbs__link" href="#">Home</a></li>
-            <li class="breadcrumbs__list-item undotted"><a class="breadcrumbs__link" href="#">Catalog</a></li>
+      <section class="category container">
+        <h1 class="category__title">CATEGORY PRODUCTS</h1>
+         <ul class="breadcrumbs__list">
+          @@include('blocks/breadcrumbs.html', {
+            "text": "Home",
+            "path": "/"})
+          @@include('blocks/breadcrumbs.html', {
+            "text": "Catalog",
+            "path": "#"})
           </ul>
-        </div> 
-        <div class="products">
-          <ul class="product__list">
-            <li class="product__list-item product__apparel undotted"><a class="product__link product__link-apparel" href="#">APPAREL KIDS</a></li>
-            <li class="product__list-item product__holiday undotted"><a class="product__link product__link-holiday" href="#">HOLIDAY SHOP</a></li>          
-            <li class="product__list-item product__toys undotted"><a class="product__link product__link-toys"  href="../pages/toys.html">TOYS</a></li>
-            <li class="products-hidden-1"></li>
-            <li class="products-hidden-2"></li>  
-            <li class="product__list-item product__accessories undotted"><a class="product__link product__link-accessories"  href="#">ACCESSORIES</a></li>
-            <li class="product__list-item product__sale undotted"><a class="product__link product__link-sale"  href="#">SALE</a></li>
-            <li class="product__list-item product__adults undotted"><a class="product__link product__link-adults" href="#">APPAREL ADULTS</a></li>
+        <div class="category__products">
+          <ul class="category__list">
+            @@include('blocks/product-list.html',{
+              "name": "APPAREL KIDS",
+              "img": "products__list-item__one",
+              "link": "products__link__apparel",
+              "href": "#"
+            })
+            @@include('blocks/product-list.html',{
+              "name": "HOLIDAY SHOP",
+              "img": "products__list-item__two",
+              "link": "products__link__holiday",
+              "href": "#"
+            })
+            @@include('blocks/product-list.html',{
+              "name": "TOYS",
+              "img": "products__list-item__three",
+              "link": "products__link__toys",
+              "href": "./toys.html"
+            })
+            <li class="category__list--empty"></li>
+            <li class="category__list--empty"></li>
+            @@include('blocks/product-list.html',{
+              "name": "ACCESSORIES",
+              "img": "products__list-item__four",
+              "link": "products__link__accessories",
+              "href": "#"
+            })
+            @@include('blocks/product-list.html',{
+              "name": "SALE",
+              "img": "products__list-item__five",
+              "link": "products__link__sale",
+              "href": "#"
+            })
+            @@include('blocks/product-list.html',{
+              "name": "APPAREL ADULTS",
+              "img": "products__list-item__six",
+              "link": "products__link__adults",
+              "href": "#"
+            })
           </ul>
         </div>
       </section>
       <section class="description container">
-        <h2 class="title description__title">PRODUCT DESCRIPTION</h2>
-        <p class="text__decorative description__text">Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
-        <p class="text__decorative description__text">A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
-        <p class="text__decorative description__text">The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
+        <h2 class="description__title">PRODUCT DESCRIPTION</h2>
+        <p class="description__text">Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
+        <p class="description__text">A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
+        <p class="description__text">The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
       </section> 
     </main>
     @@include('blocks/footer.html')
